# app/unit/handler.go
@@ -1,13 +1,14 @@
-package propertygroup
+package unit
 
 import (
+	"net/http"
+	"strings"
+
 	"github.com/jihanlugas/calendar/jwt"
 	"github.com/jihanlugas/calendar/request"
 	"github.com/jihanlugas/calendar/response"
 	"github.com/jihanlugas/calendar/utils"
 	"github.com/labstack/echo/v4"
-	"net/http"
-	"strings"
 )
 
 type Handler struct {
@@ -21,14 +22,14 @@ func NewHandler(usecase Usecase) Handler {
 }
 
 // Page
-// @Tags Propertygroup
+// @Tags Unit
 // @Security BearerAuth
 // @Accept json
 // @Produce json
-// @Param req query request.PagePropertygroup false "url query string"
+// @Param req query request.PageUnit false "url query string"
 // @Success      200  {object}	response.Response
 // @Failure      500  {object}  response.Response
-// @Router /propertygroup [get]
+// @Router /unit [get]
 func (h Handler) Page(c echo.Context) error {
 	var err error
 
@@ -37,7 +38,7 @@ func (h Handler) Page(c echo.Context) error {
 		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetUserInfo, err, nil).SendJSON(c)
 	}
 
-	req := new(request.PagePropertygroup)
+	req := new(request.PageUnit)
 	if err = c.Bind(req); err != nil {
 		return response.Error(http.StatusBadRequest, response.ErrorHandlerBind, err, nil).SendJSON(c)
 	}
@@ -66,7 +67,7 @@ func (h Handler) Page(c echo.Context) error {
 }
 
 // GetById
-// @Tags Propertygroup
+// @Tags Unit
 // @Security BearerAuth
 // @Accept json
 // @Produce json
@@ -74,7 +75,7 @@ func (h Handler) Page(c echo.Context) error {
 // @Query preloads query string false "preloads"
 // @Success      200  {object}	response.Response
 // @Failure      500  {object}  response.Response
-// @Router /propertygroup/{id} [get]
+// @Router /unit/{id} [get]
 func (h Handler) GetById(c echo.Context) error {
 	var err error
 
@@ -91,23 +92,23 @@ func (h Handler) GetById(c echo.Context) error {
 	preloads := c.QueryParam("preloads")
 	preloadSlice := strings.Split(preloads, ",")
 
-	vPropertygroup, err := h.usecase.GetById(loginUser, id, preloadSlice...)
+	vUnit, err := h.usecase.GetById(loginUser, id, preloadSlice...)
 	if err != nil {
 		return response.Error(http.StatusBadRequest, err.Error(), err, nil).SendJSON(c)
 	}
 
-	return response.Success(http.StatusOK, response.SuccessHandler, vPropertygroup).SendJSON(c)
+	return response.Success(http.StatusOK, response.SuccessHandler, vUnit).SendJSON(c)
 }
 
 // Create
-// @Tags Propertygroup
+// @Tags Unit
 // @Security BearerAuth
 // @Accept json
 // @Produce json
-// @Param req body request.CreatePropertygroup true "json req body"
+// @Param req body request.CreateUnit true "json req body"
 // @Success      200  {object}	response.Response
 // @Failure      500  {object}  response.Response
-// @Router /propertygroup [post]
+// @Router /unit [post]
 func (h Handler) Create(c echo.Context) error {
 	var err error
 
@@ -116,7 +117,7 @@ func (h Handler) Create(c echo.Context) error {
 		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetUserInfo, err, nil).SendJSON(c)
 	}
 
-	req := new(request.CreatePropertygroup)
+	req := new(request.CreateUnit)
 	if err = c.Bind(req); err != nil {
 		return response.Error(http.StatusBadRequest, response.ErrorHandlerBind, err, nil).SendJSON(c)
 	}
@@ -141,15 +142,15 @@ func (h Handler) Create(c echo.Context) error {
 }
 
 // Update
-// @Tags Propertygroup
+// @Tags Unit
 // @Security BearerAuth
 // @Accept json
 // @Produce json
 // @Param id path string true "ID"
-// @Param req body request.UpdatePropertygroup true "json req body"
+// @Param req body request.UpdateUnit true "json req body"
 // @Success      200  {object}	response.Response
 // @Failure      500  {object}  response.Response
-// @Router /propertygroup/{id} [put]
+// @Router /unit/{id} [put]
 func (h Handler) Update(c echo.Context) error {
 	var err error
 
@@ -163,7 +164,7 @@ func (h Handler) Update(c echo.Context) error {
 		return response.Error(http.StatusBadRequest, response.ErrorHandlerGetParam, err, nil).SendJSON(c)
 	}
 
-	req := new(request.UpdatePropertygroup)
+	req := new(request.UpdateUnit)
 	if err = c.Bind(req); err != nil {
 		return response.Error(http.StatusBadRequest, response.ErrorHandlerBind, err, nil).SendJSON(c)
 	}
@@ -184,14 +185,14 @@ func (h Handler) Update(c echo.Context) error {
 }
 
 // Delete
-// @Tags Propertygroup
+// @Tags Unit
 // @Security BearerAuth
 // @Accept json
 // @Produce json
 // @Param id path string true "ID"
 // @Success      200  {object}	response.Response
 // @Failure      500  {object}  response.Response
-// @Router /propertygroup/{id} [delete]
+// @Router /unit/{id} [delete]
 func (h Handler) Delete(c echo.Context) error {
 	var err error
 
