# request/event.go
@@ -8,43 +8,43 @@ import (
 
 type PageEvent struct {
 	Paging
-	CompanyID         string `json:"companyId" form:"companyId" query:"companyId"`
-	PropertyID        string `json:"propertyId" form:"propertyId" query:"propertyId"`
-	PropertygroupID   string `json:"propertygroupId" form:"propertygroupId" query:"propertygroupId" validate:""`
-	Name              string `json:"name" form:"name" query:"name"`
-	Description       string `json:"description" form:"description" query:"description"`
-	CompanyName       string `json:"companyName" form:"companyName" query:"companyName"`
-	PropertyName      string `json:"propertyName" form:"propertyName" query:"propertyName"`
-	PropertygroupName string `json:"propertygroupName" form:"propertygroupName" query:"propertygroupName"`
-	CreateName        string `json:"createName" form:"createName" query:"createName"`
-	Preloads          string `json:"preloads" form:"preloads" query:"preloads"`
+	CompanyID    string `json:"companyId" form:"companyId" query:"companyId"`
+	PropertyID   string `json:"propertyId" form:"propertyId" query:"propertyId"`
+	UnitID       string `json:"unitId" form:"unitId" query:"unitId" validate:""`
+	Name         string `json:"name" form:"name" query:"name"`
+	Description  string `json:"description" form:"description" query:"description"`
+	CompanyName  string `json:"companyName" form:"companyName" query:"companyName"`
+	PropertyName string `json:"propertyName" form:"propertyName" query:"propertyName"`
+	UnitName     string `json:"unitName" form:"unitName" query:"unitName"`
+	CreateName   string `json:"createName" form:"createName" query:"createName"`
+	Preloads     string `json:"preloads" form:"preloads" query:"preloads"`
 }
 
 type TimelineEvent struct {
-	CompanyID       string    `json:"companyId" form:"companyId" query:"companyId" validate:""`
-	PropertyID      string    `json:"propertyId" form:"propertyId" query:"propertyId" validate:""`
-	PropertygroupID string    `json:"propertygroupId" form:"propertygroupId" query:"propertygroupId" validate:""`
-	StartDt         time.Time `json:"startDt" form:"startDt" query:"startDt" validate:"required"`
-	EndDt           time.Time `json:"endDt" form:"endDt" query:"endDt" validate:"required"`
-	Preloads        string    `json:"preloads" form:"preloads" query:"preloads" validate:""`
+	CompanyID  string    `json:"companyId" form:"companyId" query:"companyId" validate:""`
+	PropertyID string    `json:"propertyId" form:"propertyId" query:"propertyId" validate:""`
+	UnitID     string    `json:"unitId" form:"unitId" query:"unitId" validate:""`
+	StartDt    time.Time `json:"startDt" form:"startDt" query:"startDt" validate:"required"`
+	EndDt      time.Time `json:"endDt" form:"endDt" query:"endDt" validate:"required"`
+	Preloads   string    `json:"preloads" form:"preloads" query:"preloads" validate:""`
 }
 
 type CreateEvent struct {
-	CompanyID       string               `json:"companyId" form:"companyId" query:"companyId" validate:"required"`
-	PropertyID      string               `json:"propertyId" form:"propertyId" query:"propertyId" validate:"required"`
-	PropertygroupID string               `json:"propertygroupId" form:"propertygroupId" query:"propertygroupId" validate:"required"`
-	Name            string               `json:"name" form:"name" query:"name" validate:"required"`
-	Description     string               `json:"description" form:"description" query:"description" validate:""`
-	StartDt         time.Time            `json:"startDt" form:"startDt" query:"startDt" validate:"required"`
-	EndDt           time.Time            `json:"endDt" form:"endDt" query:"endDt" validate:"required"`
-	Status          constant.EventStatus `json:"status" form:"status" query:"status" validate:"required"`
+	CompanyID   string               `json:"companyId" form:"companyId" query:"companyId" validate:"required"`
+	PropertyID  string               `json:"propertyId" form:"propertyId" query:"propertyId" validate:"required"`
+	UnitID      string               `json:"unitId" form:"unitId" query:"unitId" validate:"required"`
+	Name        string               `json:"name" form:"name" query:"name" validate:"required"`
+	Description string               `json:"description" form:"description" query:"description" validate:""`
+	StartDt     time.Time            `json:"startDt" form:"startDt" query:"startDt" validate:"required"`
+	EndDt       time.Time            `json:"endDt" form:"endDt" query:"endDt" validate:"required"`
+	Status      constant.EventStatus `json:"status" form:"status" query:"status" validate:"required"`
 }
 
 type UpdateEvent struct {
-	PropertygroupID string               `json:"propertygroupId" form:"propertygroupId" query:"propertygroupId" validate:"required"`
-	Name            string               `json:"name" form:"name" query:"name" validate:"required"`
-	Description     string               `json:"description" form:"description" query:"description" validate:""`
-	StartDt         time.Time            `json:"startDt" form:"startDt" query:"startDt" validate:"required"`
-	EndDt           time.Time            `json:"endDt" form:"endDt" query:"endDt" validate:"required"`
-	Status          constant.EventStatus `json:"status" form:"status" query:"status" validate:"required"`
+	UnitID      string               `json:"unitId" form:"unitId" query:"unitId" validate:"required"`
+	Name        string               `json:"name" form:"name" query:"name" validate:"required"`
+	Description string               `json:"description" form:"description" query:"description" validate:""`
+	StartDt     time.Time            `json:"startDt" form:"startDt" query:"startDt" validate:"required"`
+	EndDt       time.Time            `json:"endDt" form:"endDt" query:"endDt" validate:"required"`
+	Status      constant.EventStatus `json:"status" form:"status" query:"status" validate:"required"`
 }
